# hackergame2024-writeups

./: .autocorrectignore  LICENSE  README.md
official/Docker for Everyone Plus/: README.md
official/LESS 文件查看器在线版/: README.md
official/Node.js is Web Scale/: README.md
official/PaoluGPT/: README.md
official/PowerfulShell/: README.md
official/RISC-V：虎胆龙威/: README.md  firmware.hex.1  firmware.hex.2  firmware.hex.3  riscv_fault_in_the_hart.S  riscv_fragility.S  riscv_three_of_the_four.S
official/ZFS 文件恢复/: README.md
official/cat 绿色破解版/: README.md
official/不太分布式的软总线/: README.md
official/不宽的宽字符/: README.md
official/优雅的不等式/: README.md
official/先不说关于我从零开始独自在异世界转生成某大厂家的 LLM 龙猫女仆这件事……/: README.md  exp.patch
official/关灯/: README.md
official/动画分享/: README.md
official/哈希三碰撞/: README.md  chat1.md  chat2.md  solve1.cpp  solve3.py  solve3_2.py
official/喜欢做签到的 CTFer 你们好呀/: README.md
official/图灵完备的浮点数减法/: README.md  solve.py
official/强大的正则表达式/: README.md
official/惜字如金 3.0/: README.md
official/我们的快排確有問題/: README.md
official/打不开的盒/: README.md
official/新生赛上的零解题/: README.md
official/旅行照片 4.0/: README.md
official/无法获得的秘密/: README.md
official/每日论文太多了！/: README.md
official/比大小王/: README.md
official/猫咪问答（Hackergame 十周年纪念版）/: README.md
official/看不见的彼方：交换空间/: README.md
official/神秘代码 2/: .gitignore  README.md  (+2 more)
official/认证恢复码/src/web/: Cargo.toml
official/认证恢复码/src/web/src/: aead.rs  login_system.rs  main.rs
official/认证恢复码/src/web/static/: index.js  styles.css  user_styles.css
official/认证恢复码/src/web/templates/: index.html  users.html
(+168 files in other folders)
