[package]
name = "web-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
tera = "1.20"
hmac = "0.12"
sha2 = "0.10"
once_cell = "1.19"
base64 = "0.22"
rand = "0.8.5"
bincode = "1.3.3"
actix-files = "0.6.6"
aes-gcm = "0.10.3"
env_logger = "0.11.3"

[dependencies.actix-web-actors]
version = "4"
